--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -150,6 +150,8 @@ label {
     a {
         color: white;
         font-size: 18px;
+        text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+        text-transform: uppercase;
     }
 
     .icon { 
