--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -23,11 +23,12 @@ $font-family: 'Oswald', sans-serif;
  * -- BASE STYLES --
  * Most of these are inherited from Base, but I want to change a few.
  */
-body {
+body, html {
     color: #333;
     font-family: $font-family;
     margin: 0;
-    padding: 0; 
+    padding: 0;
+    height: 100%;
 
 }
 
@@ -295,7 +296,7 @@ label {
 
 .parallax__layer--fore { 
     color: #FFFFFF;
-    padding: 2em 1em;
+    padding: 2em 0.5em;
 
     h2 {    
         color: #FFFFFF;
@@ -317,7 +318,7 @@ label {
 }
 
 #chapters {
-    z-index: 3;
+    z-index: 4;
     height: 1600px;
 }
 #chapters .parallax__layer--back {
@@ -329,15 +330,17 @@ label {
 }
 
 #liberty {
-    z-index: 2;
+    z-index: 3;
+    height: 1400px;
 }
+
 #liberty .parallax__layer--back {
     background-image: url('../img/backgrounds/liberty-background.jpg');
 }
 
 #dating {
     z-index: 3;
-    height: 1000px;
+    height: 1700px;
 }
 
 #dating .parallax__layer--base {
@@ -346,6 +349,7 @@ label {
 
 #proposal {
     z-index: 2;
+    height: 2500px;
 }
 #proposal .parallax__layer--back {
     background-image: url('../img/backgrounds/proposal-background.jpg');
@@ -353,6 +357,7 @@ label {
 
 #surprise {
     z-index: 3;
+    height: 1000px;
 }
 #surprise .parallax__layer--base {
     background: white;
@@ -360,6 +365,7 @@ label {
 
 #wedding {
     z-index: 2;
+    height: 1200px;
 }
 #wedding .parallax__layer--back {
     background-image: url('../img/backgrounds/wedding-background.jpg');
@@ -367,6 +373,7 @@ label {
 
 #next {
     z-index: 3;
+    height: 1200px;
 }
 #next .parallax__layer--base {
     background: white;
@@ -377,6 +384,13 @@ label {
  * On tablets and other medium-sized devices, we want to customize some
  * of the mobile styles.
  */
+
+@media (min-width: 42em) {
+    #liberty { 
+        height: 900px;
+    }
+}
+
 @media (min-width: 48em) {
 
     /* We increase the body font size */
@@ -450,31 +464,60 @@ label {
     /*.liberty {
         background-image: url('../img/photos/liberty-background.jpg');
         padding: 6em 2em;
-    }*/
+    }
 
     .proposal {
         background-image: url('../img/photos/proposal-background.jpg');
-        padding: 6em 2em;
     }
 
     .wedding {
         background-image: url('../img/photos/wedding-background.jpg');
         padding: 6em 2em;
-    }
+    }*/
 
 }
 
 @media (min-width: 60em) {
     #chapters { 
-        height: 100vh;
+        height: 900px;
+    }
+
+    #liberty {
+        height: 900px;
+    }
+
+    #wedding { 
+        height: 900px;
+    }
+
+    #surprise {
+        height: 700px;
+    }
+
+    #proposal {
+        height: 1200px;
+    }
+
+    #next {
+        height: 700px;
     }
 }
 
 @media (min-width: 64em) {
     
-    #proposal {
-        height: 1000px;
+    .parallax__layer--base {
+        padding: 15vh 1em;  
+
+        h2 { 
+            margin: 0;
+        }
     }
+
+    .parallax__layer--fore {
+        padding: 15vh 1em;
+    }
+
+    
 }
 
 /*
@@ -497,11 +540,5 @@ label {
     }
 
     /** Section Styles for Parallax */ 
-    #dating {
-        height: 725px;
-    }
 
-    #proposal {
-        height: 1000px;
-    }
 }
